# mozart-ETL

./: .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.yml  pyproject.toml  workspace.yaml
.claude/: coding_conventions.md  dev_workflow.md  project_structure.md  settings.json
.claude/agents/: code-standards-enforcer.md  data-pipeline-expert.md  pr-update-expert.md
.claude/commands/: enforce_standards.md  gh_issue_solve.md  troubleshoot_asset.md  validate_changed_docstrings.md  write_pr_summary.md
dagster_open_platform/lib/fivetran/: component.py
dagster_open_platform_dbt/: CLAUDE.md
dagster_open_platform_dbt/models/dagster_open_platform/: _placeholder.sql  abm_contact_intent_scores.sql  arr_by_month.sql  statsig_user_activity_daily.sql  stg_hubspot__company.sql  stg_hubspot__contacts.sql  sync_salesforce_opportunity.sql
docker/postgres/: init.sql
docker/trino/catalog/: iceberg.properties
docs/: cfg-to-odv-transformation.md  tenant-onboarding-architecture.md
mozart_etl/: definitions.py
mozart_etl/code_locations/: _shared.py  _tenant_factory.py  output.py  project_01.py  project_02.py
mozart_etl/code_locations/output/: __init__.py
mozart_etl/code_locations/project_01/: __init__.py  tenant.yaml
mozart_etl/code_locations/project_02/: __init__.py  tenant.yaml
mozart_etl/config/: tables.yaml  tenants.yaml
mozart_etl/defs/common/: resources.py
mozart_etl/defs/dbt/: assets.py  resources.py  schedules.py
mozart_etl/lib/: __init__.py  trino.py
mozart_etl/utils/: environment_helpers.py
mozart_etl_dbt/: CLAUDE.md  dbt_project.yml  profiles.yml
mozart_etl_dbt/macros/: get_custom_schema.sql  hash_string.sql  limit_dates_for_dev.sql  limit_dates_for_insights.sql  union_tenants.sql
mozart_etl_dbt_transform/: .user.yml  PRODUCT_SCHEMA.md  dbt_project.yml
mozart_etl_dbt_transform/models/: _sources.yml
scripts/: sync_tenants.py
(+33 files in other folders)
