[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "mozart-etl"
version = "0.1.0"
requires-python = ">=3.12,<3.14"
dependencies = [
    # --- Dagster Core ---
    "dagster==1.12.11",
    "dagster-dg-cli",
    "dagster-webserver",
    "dagster-graphql",
    "dagster-pipes",
    # --- Dagster Integrations ---
    "dagster-aws",
    "dagster-dbt==0.28.11",
    "dagster-pandas",
    # --- dbt ---
    "dbt-core==1.11.1",
    "dbt-trino>=1.7.0",
    # --- Database Connectors ---
    "psycopg2-binary",
    "oracledb>=2.0.0",
    "mysql-connector-python>=8.0.0",
    "sqlalchemy>=2.0.0",
    "trino[sqlalchemy]>=0.328.0",
    # --- Data Processing ---
    "pyarrow>=14.0.0",
    "boto3",
    "s3fs>=2024.0.0",
    # --- Utilities ---
    "pydantic",
    "pyyaml",
    "jinja2",
]

[project.optional-dependencies]
dev = [
    "click",
    "pytest",
    "pyright",
    "ruff",
]

tests = [
    "pytest",
    "mock>=5.2.0",
    "responses",
]

[tool.setuptools.packages.find]
exclude = ["mozart_etl_tests"]

# ########################
# ##### DAGSTER
# ########################

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "mozart_etl"
registry_modules = [
    "mozart_etl.lib.*",
]

[tool.dg.cli]
suppress_warnings = [
    "project_and_activated_venv_mismatch",
]

# ########################
# ##### SQLFLUFF
# ########################

[tool.sqlfluff.core]
templater = "dbt"
dialect = "ansi"
max_line_length = 100
nocolor = true

[tool.sqlfluff.templater.dbt]
project_dir = "./mozart_etl_dbt"
profiles_dir = "./mozart_etl_dbt"

# ########################
# ##### PYRIGHT
# ########################

[tool.pyright]
include = ['.']
exclude = ['.venv']
reportPrivateImportUsage = false
useLibraryCodeForTypes = false
